--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <h1 class="text-4xl md:text-5xl font-bold mb-6 bg-gradient-to-r from-blue-400 to-purple-600 text-transparent bg-clip-text">
           Generate Your Perfect Hotpot Sauce
         </h1>
-        <p class="text-xl text-gray-300 mb-8">Based on your music taste</p>
+        <p class="text-xl text-gray-300 mb-4">Based on your music taste</p>
+        <p class="text-md text-gray-400 mb-8">Enhanced with advanced music metrics analysis</p>
         
         <div id="login-container" class="flex justify-center">
           <button id="spotify-login-btn" class="bg-gradient-to-r from-green-500 to-green-600 hover:from-green-600 hover:to-green-700 text-white font-bold py-3 px-6 rounded-full transition-all duration-300 flex items-center shadow-lg hover:shadow-xl">
